# agentx

./: .gitignore  Cargo.toml  MCP_SERVER.md  README.md  rust-toolchain.toml
src/: cli.rs  commands.rs  config.rs  fuzzy.rs  gemini_schema.rs  git.rs  guide.rs  installer.rs  issue.rs  lib.rs  main.rs  mcp.rs  mcp_simple.rs  storage.rs  utils.rs
src/interactive/: mod.rs  validators.rs  wizard.rs  wizards.rs
src/mcp/: mod.rs
src/tui/: events.rs  mod.rs  theme.rs
src/tui/views/: dashboard.rs  detail.rs  mod.rs
src/tui/widgets/: graph.rs  kanban.rs  mod.rs  sparkline.rs
