[package]
name = "agentx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
regex = "1.11"
rmcp = { version = "0.9", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = { path = "vendor/schemars/schemars" }
once_cell = "1.20"
dirs = "6.0"
git2 = "0.19"
strsim = "0.11"

# Interactive Mode (Phase 1)
dialoguer = "0.11"
console = "0.15"
fuzzy-matcher = "0.3"
syntect = "5.2"
atty = "0.2"

# TUI Dashboard (Phase 2)
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.6"
tui-tree-widget = "0.22"
notify = "7.0"
unicode-width = "0.2"

# Performance
rayon = "1.10"
dashmap = "6.1"
smol_str = { version = "0.3.4", features = ["serde"] }

[patch.crates-io]
schemars = { path = "vendor/schemars/schemars" }
rmcp = { path = "vendor/rmcp" }
